--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
         <div class="home-layout">
             <div class="main-content">
                 <div class="content-card">
-                    <h3>Best Chartered Accountants in India</h3>
+                    <h3>Meet CA Pankaj Gupta – Your Trusted Financial Advisor</h3>
                     <div class="content-with-image">
                         <div class="content-text">
-                            <p>Pankaj Manvi and Associates is a distinguished CA Firm with a robust team of skilled and proficient Chartered Accountants who can handle all financial services related to Income Tax, Goods & Services Tax (GST), Auditing & Assurance, Company Law Matters, Business Advisory, and comprehensive financial solutions.</p>
+                            <p><b>CA Pankaj Gupta</b> is a distinguished Chartered Accountant and financial expert based in Panchkula, with extensive experience in taxation, corporate governance, and financial advisory. He serves as an <b>Independent Director at NTPC Ltd</b> and brings strategic insights across compliance, auditing, and business advisory, helping organizations and individuals navigate complex financial landscapes.</p>
                         </div>
                         <img src="pankajguptantpc.jpg" alt="Financial Services" class="content-image">
                     </div>
-                    <p style="margin-top: 1rem;">With years of professional expertise and unwavering commitment to excellence, we stand as your trusted partner in navigating the complex landscape of taxation, compliance, and financial management. Our firm combines traditional values of integrity with modern approaches to deliver exceptional service quality.</p>
+                    <p style="margin-top: 1rem;">With a strong commitment to public service, he is the <b>Convenor of BJP Economic Cell, Convenor of the Next-Gen GST Reforms Committee, and a Member of the District Public Relations and Grievance Redressal Committee.</b> Combining professional expertise with civic engagement, CA Pankaj Gupta provides innovative financial solutions while upholding integrity, transparency, and excellence in all endeavors.</p>
                 </div>
 
                 <div class="content-card">
@@ -151,11 +151,10 @@
         </div>
         
         <div class="footer-bottom">
-            <p>&copy; 2025 Pankaj Manvi and Associates. All rights reserved. | Chartered Accountants </p>
+            <p>&copy; 2025 Pankaj Manvi and Associates. All rights reserved. | Chartered Accountants</p>
         </div>
     </footer>
 
     <script src="scripts.js"></script>
 </body>
-
 </html>
